# blueprint

./: Cargo.toml  README.md  create_base_folder_structure.sh  pyproject.toml
asdasd/: main.txt
src/: cli.rs  engine.rs  main.rs
src/blueprint/: cli.py
src/blueprint.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/templates/: hello_world.tmpl
