[project]
name = "blueprint"
version = "0.1.0"
description = "Interactive blueprint CLI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "typer>=0.12",
  "rich>=13",
  "InquirerPy>=0.3",
  "pydantic>=2",
  "pydantic-settings>=2",
  "pyyaml>=6"
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "black", "mypy", "pre-commit"]

[project.scripts]
blueprint = "blueprint.cli:app"

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.10"
strict = true
